# drift-models

./: .gitignore  README.md  pyproject.toml
models/JiT/: JiT.py  JiT_uncond.py  __init__.py
models/MAE/: __init__.py  mae.py  modules.py
train/MAE/: train_MAE.py  train_MAE_celebA.py
train/unconditional/: train_MNIST.py  train_celebA.py  train_circles.py
