[project]
name = "drift-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "einops>=0.8.2",
    "gdown>=5.2.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "triton>=3.4.0",
]
